Fix resource-viewer overflow issue
- It turned out to be the overflow: visible on resource-viewer. Up
next ( later, I'm tired ): resource-viewer event positioning.

--- a/client/app/dashboard/dashboard.component.scss
+++ b/client/app/dashboard/dashboard.component.scss
@@ -1,11 +1,13 @@
 :host{
+
 	height: 100vh;
 	width: 100vw;
+
 	// flex parent for child components
 	display: flex;
 	flex-direction: row;
-	flex-wrap: nowrap;
 	justify-content: flex-start;
-	// FIXME: is this a good idea?
+
 	overflow: hidden;
+
 }
