--- a/client/app/dashboard/resource-viewer/resource-viewer.component.scss
+++ b/client/app/dashboard/resource-viewer/resource-viewer.component.scss
@@ -2,9 +2,9 @@
 
 :host{
 	flex: 1 1 auto;
-
-	overflow: visible;
 	
+	overflow: hidden;
+
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
